--- a/seaborn_frist.ipynb
+++ b/seaborn_frist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+vnxJxRxefz3kQkvhzZYe",
+      "authorship_tag": "ABX9TyM9An9UN7IqQAHSjCyomaXm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -830,6 +830,17 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=pd.read_csv('/content/Titanic.csv')"
+      ],
+      "metadata": {
+        "id": "MFDG0-giMurX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2156,12 +2167,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "cfRycDB4P8EB",
-        "outputId": "3ef0e738-9dfa-4d5c-bb63-19bd6821baee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "cfRycDB4P8EB",
+        "outputId": "3ef0e738-9dfa-4d5c-bb63-19bd6821baee"
       },
       "execution_count": 47,
       "outputs": [
